--- a/app/views/v7/l3/users/view/sorted/all-by-email.html
+++ b/app/views/v7/l3/users/view/sorted/all-by-email.html
@@ -11,24 +11,24 @@
 
 {% block content %}
 
-    {% include "./includes/user-view-heading-add-search.html" %}
+    {% include "../includes/user-view-heading-add-search.html" %}
 
-    {% include "./includes/org-user-view-filters.html" %}
+    {% include "../includes/org-user-view-filters.html" %}
 
     <table class="govuk-table">
         <thead class="govuk-table__head">
             <tr class="govuk-table__row">
                 <th scope="col" class="govuk-table__header govuk-!-width-one-third">
-                    <button type="button" class="sort-header-toggle sorted-descending" onclick="window.location.href='sorted/all-by-name-reverse'">
+                    <button type="button" class="sort-header-toggle" onclick="window.location.href='../all'">
                         Name
                     </button>
                 </th>
                 <th scope="col" class="govuk-table__header">
-                    <button type="button" class="sort-header-toggle" onclick="window.location.href='sorted/all-by-email'">
+                    <button type="button" class="sort-header-toggle sorted-descending" onclick="window.location.href='all-by-email-reverse'">
                         Email address
                     </button>
                 </th>
-                <th scope="col" class="govuk-table__header govuk-!-width-one-quarter" onclick="window.location.href='sorted/all-by-status'">
+                <th scope="col" class="govuk-table__header govuk-!-width-one-quarter" onclick="window.location.href='all-by-status'">
                     <button type="button" class="sort-header-toggle ">
                         Status
                     </button>
