Added filtered results to L3 users list

--- a/app/views/v7/l3/users/view/includes/org-user-view-filters.html
+++ b/app/views/v7/l3/users/view/includes/org-user-view-filters.html
@@ -19,7 +19,7 @@
             </button>
         
 
-            <a class="govuk-button govuk-button--secondary" data-module="govuk-button" href="../all" >
+            <a class="govuk-button govuk-button--secondary" data-module="govuk-button" href="./all" >
                 Clear
             </a>
         
