--- a/app/views/v7/l3/users/view/sorted/filtered-invite-expired.html
+++ b/app/views/v7/l3/users/view/sorted/filtered-invite-expired.html
@@ -11,28 +11,10 @@
 
 {% block content %}
 
-    {% if data['filter-users-status'] | lower == 'active' %}
-        <script>
-            window.location.href = 'filtered-active'
-        </script>
-    {% endif %}
-
-    {% if data['filter-users-status'] | lower == 'invite-expired' %}
-        <script>
-            window.location.href = 'filtered-invite-expired'
-        </script>
-    {% endif %}
-
-    {% if data['filter-users-status'] | lower == 'invite-sent' %}
-        <script>
-            window.location.href = 'filtered-invite-sent'
-        </script>
-    {% endif %}
+  
 
 
     {% include "../includes/user-view-heading-add-search.html" %}
-
-  
 
     <div class="govuk-grid-row filter-block">
         <div class="govuk-form-group">
@@ -44,9 +26,9 @@
             <form action="/v7/l3/users/view/sorted/filtered-access-expired" method="post" class="form">
                 <select class="govuk-select govuk-!-margin-right-1" id="filter-users-status" name="filter-users-status">
                     <option value="all-statuses">All statuses</option>
-                    <option value="access-expired" selected>Access expired</option>
+                    <option value="access-expired">Access expired</option>
                     <option value="active">Active</option>
-                    <option value="invite-expired">Invite expired</option>
+                    <option value="invite-expired" selected>Invite expired</option>
                     <option value="invite-sent">Invite sent</option>
                 </select>
 
@@ -63,23 +45,17 @@
         </div>
     </div>
 
-
-
-
-    <p class="govuk-body" style="margin-top:-25px">Showing <strong>3 Access expired</strong> users</p>
+    <p class="govuk-body" style="margin-top:-25px">Showing <strong>1 Invite expired</strong> user</p>
 
     <table class="govuk-table">
         <thead class="govuk-table__head">
             <tr class="govuk-table__row">
                 <th scope="col" class="govuk-table__header govuk-!-width-one-third">
-                    <button type="button" class="sort-header-toggle sorted-descending" onclick="window.location.href='#'">
+                    
                         Name
-                    </button>
                 </th>
                 <th scope="col" class="govuk-table__header">
-                    <button type="button" class="sort-header-toggle" onclick="window.location.href='#'">
                         Email address
-                    </button>
                 </th>
                 <th scope="col" class="govuk-table__header govuk-!-width-one-quarter">
                     Status 
@@ -91,26 +67,12 @@
 
         <tbody class="govuk-table__body">
           
-
             <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">David Batty</a></th>
-                <td class="govuk-table__cell">david.batty@{{ data['prototype-organisation-machine'] }}</td>
-                <td class="govuk-table__cell">Access expired</td>
+                <th scope="row" class="govuk-table__header"><a href="single-hs" class="govuk-link">Harpal Singh</a></th>
+                <td class="govuk-table__cell">harpal.singh@{{ data['prototype-organisation-machine'] }}</td>
+                <td class="govuk-table__cell ">Invite expired</td>
             </tr>
 
-            <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Gary Speed</a></th>
-                <td class="govuk-table__cell">gary.speed@{{ data['prototype-organisation-machine'] }}</td>
-                <td class="govuk-table__cell">Access expired</td>
-            </tr>
-
-             <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Jon Newsome</a></th>
-                <td class="govuk-table__cell">jon.newsome@{{ data['prototype-organisation-machine'] }}</td>
-                <td class="govuk-table__cell">Access expired</td>
-            </tr>
-
-           
         </tbody>
     </table>
 
