--- a/app/views/v7/l3/users/view/sorted/filtered-invite-sent.html
+++ b/app/views/v7/l3/users/view/sorted/filtered-invite-sent.html
@@ -11,28 +11,10 @@
 
 {% block content %}
 
-    {% if data['filter-users-status'] | lower == 'active' %}
-        <script>
-            window.location.href = 'filtered-active'
-        </script>
-    {% endif %}
-
-    {% if data['filter-users-status'] | lower == 'invite-expired' %}
-        <script>
-            window.location.href = 'filtered-invite-expired'
-        </script>
-    {% endif %}
-
-    {% if data['filter-users-status'] | lower == 'invite-sent' %}
-        <script>
-            window.location.href = 'filtered-invite-sent'
-        </script>
-    {% endif %}
+  
 
 
     {% include "../includes/user-view-heading-add-search.html" %}
-
-  
 
     <div class="govuk-grid-row filter-block">
         <div class="govuk-form-group">
@@ -44,10 +26,10 @@
             <form action="/v7/l3/users/view/sorted/filtered-access-expired" method="post" class="form">
                 <select class="govuk-select govuk-!-margin-right-1" id="filter-users-status" name="filter-users-status">
                     <option value="all-statuses">All statuses</option>
-                    <option value="access-expired" selected>Access expired</option>
+                    <option value="access-expired">Access expired</option>
                     <option value="active">Active</option>
                     <option value="invite-expired">Invite expired</option>
-                    <option value="invite-sent">Invite sent</option>
+                    <option value="invite-sent" selected>Invite sent</option>
                 </select>
 
                 <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">
@@ -63,10 +45,7 @@
         </div>
     </div>
 
-
-
-
-    <p class="govuk-body" style="margin-top:-25px">Showing <strong>3 Access expired</strong> users</p>
+    <p class="govuk-body" style="margin-top:-25px">Showing <strong>3 Invite sent</strong> users</p>
 
     <table class="govuk-table">
         <thead class="govuk-table__head">
@@ -93,21 +72,21 @@
           
 
             <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">David Batty</a></th>
-                <td class="govuk-table__cell">david.batty@{{ data['prototype-organisation-machine'] }}</td>
-                <td class="govuk-table__cell">Access expired</td>
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Chris Whyte</a></th>
+                <td class="govuk-table__cell">chris.whyte@{{ data['prototype-organisation-machine'] }}</td>
+                <td class="govuk-table__cell">Invite sent</td>
             </tr>
 
             <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Gary Speed</a></th>
-                <td class="govuk-table__cell">gary.speed@{{ data['prototype-organisation-machine'] }}</td>
-                <td class="govuk-table__cell">Access expired</td>
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Christine Harris</a></th>
+                <td class="govuk-table__cell">christine.harris@{{ data['prototype-organisation-machine'] }}</td>
+                <td class="govuk-table__cell">Invite sent</td>
             </tr>
 
-             <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Jon Newsome</a></th>
-                <td class="govuk-table__cell">jon.newsome@{{ data['prototype-organisation-machine'] }}</td>
-                <td class="govuk-table__cell">Access expired</td>
+            <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Gordon Strachan</a></th>
+                <td class="govuk-table__cell">gordon.strachan@{{ data['prototype-organisation-machine'] }}</td>
+                <td class="govuk-table__cell">Invite sent</td>
             </tr>
 
            
