Fixed broken links to user details

--- a/app/views/v7/l3/users/view/sorted/filtered-access-expired.html
+++ b/app/views/v7/l3/users/view/sorted/filtered-access-expired.html
@@ -93,19 +93,19 @@
           
 
             <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">David Batty</a></th>
+                <th scope="row" class="govuk-table__header"><a href="../single" class="govuk-link">David Batty</a></th>
                 <td class="govuk-table__cell">david.batty@{{ data['prototype-organisation-machine'] }}</td>
                 <td class="govuk-table__cell">Access expired</td>
             </tr>
 
             <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Gary Speed</a></th>
+                <th scope="row" class="govuk-table__header"><a href="../single" class="govuk-link">Gary Speed</a></th>
                 <td class="govuk-table__cell">gary.speed@{{ data['prototype-organisation-machine'] }}</td>
                 <td class="govuk-table__cell">Access expired</td>
             </tr>
 
              <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Jon Newsome</a></th>
+                <th scope="row" class="govuk-table__header"><a href="../single" class="govuk-link">Jon Newsome</a></th>
                 <td class="govuk-table__cell">jon.newsome@{{ data['prototype-organisation-machine'] }}</td>
                 <td class="govuk-table__cell">Access expired</td>
             </tr>
