--- a/app/views/v7/l3/users/view/sorted/filtered-active.html
+++ b/app/views/v7/l3/users/view/sorted/filtered-active.html
@@ -72,114 +72,114 @@
           
 
             <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Adam Bucknall</a></th>
+                <th scope="row" class="govuk-table__header"><a href="../single" class="govuk-link">Adam Bucknall</a></th>
                 <td class="govuk-table__cell">adam.bucknall@{{ data['prototype-organisation-machine'] }}</td>
                 <td class="govuk-table__cell">Active</td>
             </tr>
 
             <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Amy Smith</a></th>
+                <th scope="row" class="govuk-table__header"><a href="../single" class="govuk-link">Amy Smith</a></th>
                 <td class="govuk-table__cell">amy.smith@{{ data['prototype-organisation-machine'] }}</td>
                 <td class="govuk-table__cell">Active</td>
             </tr>
 
             <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Andy Dawson</a></th>
+                <th scope="row" class="govuk-table__header"><a href="../single" class="govuk-link">Andy Dawson</a></th>
                 <td class="govuk-table__cell">andy.dawson@{{ data['prototype-organisation-machine'] }}</td>
                 <td class="govuk-table__cell">Active</td>
             </tr>
 
 
              <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Barry Holmes</a></th>
+                <th scope="row" class="govuk-table__header"><a href="../single" class="govuk-link">Barry Holmes</a></th>
                 <td class="govuk-table__cell">barry.holmes@{{ data['prototype-organisation-machine'] }}</td>
                 <td class="govuk-table__cell">Active</td>
             </tr>
 
             <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Ben Todd</a></th>
+                <th scope="row" class="govuk-table__header"><a href="../single" class="govuk-link">Ben Todd</a></th>
                 <td class="govuk-table__cell">ben.todd@{{ data['prototype-organisation-machine'] }}</td>
                 <td class="govuk-table__cell">Active</td>
             </tr>
 
             <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Carol Adams</a></th>
+                <th scope="row" class="govuk-table__header"><a href="../single" class="govuk-link">Carol Adams</a></th>
                 <td class="govuk-table__cell">carol.adams@{{ data['prototype-organisation-machine'] }}</td>
                 <td class="govuk-table__cell">Active</td>
             </tr>
 
 
             <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Chris Fairclough</a></th>
+                <th scope="row" class="govuk-table__header"><a href="../single" class="govuk-link">Chris Fairclough</a></th>
                 <td class="govuk-table__cell">chris.fairclough@{{ data['prototype-organisation-machine'] }}</td>
                 <td class="govuk-table__cell">Active</td>
             </tr>
 
 
             <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Gabby Dyche</a></th>
+                <th scope="row" class="govuk-table__header"><a href="../single" class="govuk-link">Gabby Dyche</a></th>
                 <td class="govuk-table__cell">gabby.dyche@{{ data['prototype-organisation-machine'] }}</td>
                 <td class="govuk-table__cell">Active</td>
             </tr>
 
             <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Gary McAllister</a></th>
+                <th scope="row" class="govuk-table__header"><a href="../single" class="govuk-link">Gary McAllister</a></th>
                 <td class="govuk-table__cell">gary.mcallister@{{ data['prototype-organisation-machine'] }}</td>
                 <td class="govuk-table__cell">Active</td>
             </tr>
 
             <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single-hs" class="govuk-link">Haroon Latif</a></th>
+                <th scope="row" class="govuk-table__header"><a href="../single-hs" class="govuk-link">Haroon Latif</a></th>
                 <td class="govuk-table__cell">haroon.latif@{{ data['prototype-organisation-machine'] }}</td>
                 <td class="govuk-table__cell ">Active</td>
             </tr>
 
             <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single-jb" class="govuk-link">Jacob Burns</a></th>
+                <th scope="row" class="govuk-table__header"><a href="../single-jb" class="govuk-link">Jacob Burns</a></th>
                 <td class="govuk-table__cell">jacob.burns@{{ data['prototype-organisation-machine'] }}</td>
                 <td class="govuk-table__cell ">Active</td>
             </tr>
 
              <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single-jb" class="govuk-link">Jenny Clarkson</a></th>
+                <th scope="row" class="govuk-table__header"><a href="../single-jb" class="govuk-link">Jenny Clarkson</a></th>
                 <td class="govuk-table__cell">jenny.clarkson@{{ data['prototype-organisation-machine'] }}</td>
                 <td class="govuk-table__cell ">Active</td>
             </tr>
 
 
             <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">John Lukic</a></th>
+                <th scope="row" class="govuk-table__header"><a href="../single" class="govuk-link">John Lukic</a></th>
                 <td class="govuk-table__cell">john.lukic@{{ data['prototype-organisation-machine'] }}</td>
                 <td class="govuk-table__cell ">Active</td>
             </tr>
 
 
                <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Lee Chapman</a></th>
+                <th scope="row" class="govuk-table__header"><a href="../single" class="govuk-link">Lee Chapman</a></th>
                 <td class="govuk-table__cell">lee.chapman@{{ data['prototype-organisation-machine'] }}</td>
                 <td class="govuk-table__cell">Active</td>
             </tr>
 
             <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Mel Sterland</a></th>
+                <th scope="row" class="govuk-table__header"><a href="../single" class="govuk-link">Mel Sterland</a></th>
                 <td class="govuk-table__cell">mel.sterland@{{ data['prototype-organisation-machine'] }}</td>
                 <td class="govuk-table__cell">Active</td>
             </tr>
 
             <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Rod Wallace</a></th>
+                <th scope="row" class="govuk-table__header"><a href="../single" class="govuk-link">Rod Wallace</a></th>
                 <td class="govuk-table__cell">rod.wallace@{{ data['prototype-organisation-machine'] }}</td>
                 <td class="govuk-table__cell">Active</td>
             </tr>
 
             <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Steve Hodge</a></th>
+                <th scope="row" class="govuk-table__header"><a href="../single" class="govuk-link">Steve Hodge</a></th>
                 <td class="govuk-table__cell">steve.hodge@{{ data['prototype-organisation-machine'] }}</td>
                 <td class="govuk-table__cell ">Active</td>
             </tr>
 
             <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Tony Dorigo</a></th>
+                <th scope="row" class="govuk-table__header"><a href="../single" class="govuk-link">Tony Dorigo</a></th>
                 <td class="govuk-table__cell">tony.dorigo@{{ data['prototype-organisation-machine'] }}</td>
                 <td class="govuk-table__cell">Active</td>
             </tr>
