--- a/app/views/v7/l3/users/view/sorted/filtered-invite-expired.html
+++ b/app/views/v7/l3/users/view/sorted/filtered-invite-expired.html
@@ -68,7 +68,7 @@
         <tbody class="govuk-table__body">
           
             <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single-hs" class="govuk-link">Harpal Singh</a></th>
+                <th scope="row" class="govuk-table__header"><a href="../single-hs" class="govuk-link">Harpal Singh</a></th>
                 <td class="govuk-table__cell">harpal.singh@{{ data['prototype-organisation-machine'] }}</td>
                 <td class="govuk-table__cell ">Invite expired</td>
             </tr>
