--- a/app/views/v7/l3/users/view/sorted/filtered-invite-sent.html
+++ b/app/views/v7/l3/users/view/sorted/filtered-invite-sent.html
@@ -72,19 +72,19 @@
           
 
             <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Chris Whyte</a></th>
+                <th scope="row" class="govuk-table__header"><a href="../single" class="govuk-link">Chris Whyte</a></th>
                 <td class="govuk-table__cell">chris.whyte@{{ data['prototype-organisation-machine'] }}</td>
                 <td class="govuk-table__cell">Invite sent</td>
             </tr>
 
             <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Christine Harris</a></th>
+                <th scope="row" class="govuk-table__header"><a href="../single" class="govuk-link">Christine Harris</a></th>
                 <td class="govuk-table__cell">christine.harris@{{ data['prototype-organisation-machine'] }}</td>
                 <td class="govuk-table__cell">Invite sent</td>
             </tr>
 
             <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="single" class="govuk-link">Gordon Strachan</a></th>
+                <th scope="row" class="govuk-table__header"><a href="../single" class="govuk-link">Gordon Strachan</a></th>
                 <td class="govuk-table__cell">gordon.strachan@{{ data['prototype-organisation-machine'] }}</td>
                 <td class="govuk-table__cell">Invite sent</td>
             </tr>
