Added dymanic org to search results users

--- a/app/views/v7/l3/users/view/single-hs.html
+++ b/app/views/v7/l3/users/view/single-hs.html
@@ -50,7 +50,7 @@
                             text: "Email address"
                         },
                         value: {
-                            text: "harpal.singh@peopleplus.co.uk"
+                            html: "harpal.singh@" + data['prototype-organisation-machine']
                         }
                     },
                     {
@@ -58,7 +58,7 @@
                             text: "Organisation"
                         },
                         value: {
-                            text: "PeoplePlus"
+                            html: data['prototype-organisation']
                         }
                     },
                     {
