--- a/app/views/v7/l3/users/view/sorted/filtered-active.html
+++ b/app/views/v7/l3/users/view/sorted/filtered-active.html
@@ -129,7 +129,7 @@
             </tr>
 
             <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="../single-hs" class="govuk-link">Haroon Latif</a></th>
+                <th scope="row" class="govuk-table__header"><a href="../single" class="govuk-link">Haroon Latif</a></th>
                 <td class="govuk-table__cell">haroon.latif@{{ data['prototype-organisation-machine'] }}</td>
                 <td class="govuk-table__cell ">Active</td>
             </tr>
@@ -141,7 +141,7 @@
             </tr>
 
              <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="../single-jb" class="govuk-link">Jenny Clarkson</a></th>
+                <th scope="row" class="govuk-table__header"><a href="../single" class="govuk-link">Jenny Clarkson</a></th>
                 <td class="govuk-table__cell">jenny.clarkson@{{ data['prototype-organisation-machine'] }}</td>
                 <td class="govuk-table__cell ">Active</td>
             </tr>
