Added data to org name for confirmation page

--- a/app/views/v7/l2/users/add-multiple-orgs-checkboxes/choose-orgs.html
+++ b/app/views/v7/l2/users/add-multiple-orgs-checkboxes/choose-orgs.html
@@ -128,131 +128,163 @@
                             },
                             {
                             value: "Hertfordshire County Council",
-                            text: "Hertfordshire County Council"
+                            text: "Hertfordshire County Council",
+                            checked: checked("organisations", "Hertfordshire County Council")
                             },
                             {
                             value: "Ingeus",
-                            text: "Ingeus"
+                            text: "Ingeus",
+                            checked: checked("organisations", "Ingeus")
                             },
                             {
                             value: "Interserve",
-                            text: "Interserve"
+                            text: "Interserve",
+                            checked: checked("organisations", "Interserve")
                             },
                             {
                             value: "Intraining",
-                            text: "Intraining"
+                            text: "Intraining",
+                            checked: checked("organisations", "Intraining")
                             },
                              {
                             value: "IXION",
-                            text: "IXION"
+                            text: "IXION",
+                            checked: checked("organisations", "IXION")
                             },
                              {
                             value: "JHP Group Ltd - Learn Direct",
-                            text: "JHP Group Ltd - Learn Direct"
+                            text: "JHP Group Ltd - Learn Direct",
+                            checked: checked("organisations", "JHP Group Ltd - Learn Direct")
                             },
                              {
                             value: "Kennedy Scott",
-                            text: "Kennedy Scott"
+                            text: "Kennedy Scott",
+                            checked: checked("organisations", "Kennedy Scott")
                             },
                              {
                             value: "Kent County Council",
-                            text: "Kent County Council"
+                            text: "Kent County Council",
+                            checked: checked("organisations", "Kent County Council")
                             },
                              {
                             value: "London Borough of Croydon",
-                            text: "London Borough of Croydon"
+                            text: "London Borough of Croydon",
+                            checked: checked("organisations", "London Borough of Croydon")
                             },
                              {
                             value: "Maximus",
-                            text: "Maximus"
+                            text: "Maximus",
+                            checked: checked("organisations", "Maximus")
                             },
                              {
                             value: "Momentum",
-                            text: "Momentum"
+                            text: "Momentum",
+                            checked: checked("organisations", "Momentum")
                             },
                              {
                             value: "Newcastle College - Intraining",
-                            text: "Newcastle College - Intraining"
+                            text: "Newcastle College - Intraining",
+                            checked: checked("organisations", "Newcastle College - Intraining")
                             },
                              {
                             value: "PeoplePlus",
-                            text: "PeoplePlus"
+                            text: "PeoplePlus",
+                            checked: checked("organisations", "PeoplePlus")
                             },
                              {
                             value: "Pertemps",
-                            text: "Pertemps"
+                            text: "Pertemps",
+                            checked: checked("organisations", "Pertemps")
                             },
                              {
                             value: "Pinnacle People",
-                            text: "Pinnacle People"
+                            text: "Pinnacle People",
+                            checked: checked("organisations", "Pinnacle People")
                             },
                              {
                             value: "PLUSS Org",
-                            text: "PLUSS Org"
+                            text: "PLUSS Org",
+                            checked: checked("organisations", "PLUSS Org")
                             },
                             {
                             value: "Prospects Services Ltd",
-                            text: "Prospects Services Ltd"
+                            text: "Prospects Services Ltd",
+                            checked: checked("organisations", "Prospects Services Ltd")
                             },
                              {
                             value: "RBLI",
-                            text: "RBLI"
+                            text: "RBLI",
+                            checked: checked("organisations", "RBLI")
                             },
                              {
                             value: "Reed",
-                            text: "Reed"
+                            text: "Reed",
+                            checked: checked("organisations", "Reed")
                             },
                              {
                             value: "Rehab Jobfit",
-                            text: "Rehab Jobfit"
+                            text: "Rehab Jobfit",
+                            checked: checked("organisations", "Rehad Jobfit")
                             },
                             {
                             value: "Relate",
-                            text: "Relate"
+                            text: "Relate",
+                            checked: checked("organisations", "Relate")
                             },
                              {
                             value: "Remploy",
-                            text: "Remploy"
+                            text: "Remploy",
+                            checked: checked("organisations", "Remploy")
                             },
                              {
                             value: "Royal National College for the Blind",
-                            text: "Royal National College for the Blind"
+                            text: "Royal National College for the Blind",
+                            checked: checked("organisations", "Royal National College for the Blind")
                             },
                              {
                             value: "SEETEC",
-                            text: "SEETEC"
+                            text: "SEETEC",
+                            checked: checked("organisations", "SEETEC")
                             },
                              {
                             value: "Serco",
-                            text: "Serco"
+                            text: "Serco",
+                            checked: checked("organisations", "Serco")
                             },
                             {
                             value: "Shaw Trust",
-                            text: "Shaw Trust"
+                            text: "Shaw Trust",
+                            checked: checked("organisations", "Shaw Trust")
                             },
                             {
                             value: "Standguide",
-                            text: "Standguide"
+                            text: "Standguide",
+                            checked: checked("organisations", "Standguide")
                             },
                             {
                             value: "Stockport Council Adult Social Care",
-                            text: "Stockport Council Adult Social Care"
+                            text: "Stockport Council Adult Social Care",
+                            checked: checked("organisations", "Stockport Council Adult Social Care")
                             },
                             {
                             value: "Tavistock Relationships",
-                            text: "Tavistock Relationships"
+                            text: "Tavistock Relationships",
+                            checked: checked("organisations", "Tavistock Relationships")
                             },
                             {
                             value: "Telford and Wrekin Council",
-                            text: "Telford and Wrekin Council"
+                            text: "Telford and Wrekin Council",
+                            checked: checked("organisations", "Telford and Wrekin Council")
                             },
                             {
                             value: "Twin Training International",
-                            text: "Twin Training International"
+                            text: "Twin Training International",
+                            checked: checked("organisations", "Twin Training International")
                             },
                             {
                             value: "Working Links",
-                            text: "Working Links"
+                            text: "Working Links",
+                            checked: checked("organisations", "Working Links")
                             }
                         ]
                         }) }}
@@ -271,7 +303,7 @@
                 </span>
             </summary>
             <div class="govuk-details__text">
-                You can an <a href="">add an organisation</a> then add {{ data['user-first-name'] }} {{ data['user-last-name'] }} as a member later.
+                You can an <a href="../../orgs/add/start">add an organisation</a> then add {{ data['user-first-name'] }} {{ data['user-last-name'] }} as a member later.
             </div>
             </details>
               
