--- a/app/views/v7/l2/users/add-multiple-orgs-checkboxes/confirmation.html
+++ b/app/views/v7/l2/users/add-multiple-orgs-checkboxes/confirmation.html
@@ -35,7 +35,7 @@
 
             <p>
                
-                    <a href="start" class="govuk-link">
+                    <a href="details" class="govuk-link">
                         Add another user
                     </a>
             </p>
