Edit to changes list

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -246,6 +246,9 @@
                 <li>
                     Increased prominence of user search box hint text due to some users not noticing it
                 </li>
+                <li>
+                    Added an alternative journey for <a href="/v7/l2/users/add-multiple-orgs-checkboxes/details">adding a user to multiple organisations</a>
+                </li>
             </ul>
 
             <h3 class="govuk-heading-s">Confidence level</h3>
