Updated access expired status for L3 user

--- a/app/views/v7/l3/users/view/sorted/filtered-access-expired.html
+++ b/app/views/v7/l3/users/view/sorted/filtered-access-expired.html
@@ -105,7 +105,7 @@
             </tr>
 
              <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header"><a href="../single" class="govuk-link">Jon Newsome</a></th>
+                <th scope="row" class="govuk-table__header"><a href="../single-jn" class="govuk-link">Jon Newsome</a></th>
                 <td class="govuk-table__cell">jon.newsome@{{ data['prototype-organisation-machine'] }}</td>
                 <td class="govuk-table__cell">Access expired</td>
             </tr>
