Added restore journey to user status radios

--- a/app/views/v7/l3/users/view/single-jn.html
+++ b/app/views/v7/l3/users/view/single-jn.html
@@ -107,7 +107,7 @@
                         },
                         {
                             value: "delete",
-                            text: "Delete Jacob Burns"
+                            text: "Delete Jon Newsome"
                         }
                     ]
                 }) }}
