Edits to general changes list

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -249,6 +249,12 @@
                 <li>
                     Added an alternative journey for <a href="/v7/l2/users/add-multiple-orgs-checkboxes/details">adding a user to multiple organisations</a>
                 </li>
+                <li>
+                    Added description about what <a href="/v7/l3/users/view/single-jn">access expired</a> status means on L3 user details page
+                </li>
+                <li>
+                    Added route to <a href="/v7/l3/users/view/single-jn">restore access</a> to access expired status user on L3 user details page
+                </li>
             </ul>
 
             <h3 class="govuk-heading-s">Confidence level</h3>
